--- a/01-ai-core-azure-openai-proxy/scenario/proxy.yaml
+++ b/01-ai-core-azure-openai-proxy/scenario/proxy.yaml
@@ -1,12 +1,12 @@
 apiVersion: ai.sap.com/v1alpha1
 kind: ServingTemplate
 metadata:
-  name: azure-openai-proxy_kuhnsa1234 # executable ID, must be unique across your SAP AI Core instance, for example use `server-pipeline-yourname-1234`
+  name: azure-openai-proxy # executable ID, must be unique across your SAP AI Core instance, for example use `server-pipeline-yourname-1234`azure-openai-proxy_kuhnsa1234
   annotations:  
     scenarios.ai.sap.com/description: "Azure OpenAI  Proxy"
     scenarios.ai.sap.com/name: "Azure OpenAI Proxy" # Scenario name should be the use case
     executables.ai.sap.com/description: "Azure OpenAI Completions Proxy as Inference"
-    executables.ai.sap.com/name: "azure-openai-proxy-test" # Executable name should describe the workflow in the use case
+    executables.ai.sap.com/name: "azure-openai-proxy" # Executable name should describe the workflow in the use case
   labels:
     scenarios.ai.sap.com/id: "azure-openai-proxy"
     ai.sap.com/version: "1.0"
